# ion-rust

./: BENCHMARKS.md  Cargo.toml
benches/: ion_1_1-alt-primitives.rs  ion_1_1-primitives.rs
examples/: ion_grep.rs  read_all_values.rs
src/: Reader.rs  blocking_lazy_reader.rs  blocking_reader.rs  constants.rs  cursor.rs  lib.rs  raw_reader.rs  raw_symbol_token.rs  raw_symbol_token_ref.rs  reader.rs  stream_reader.rs  symbol.rs  symbol_ref.rs  symbol_table.rs  system_reader.rs  value_reader.rs
src/binary/: binary_writer.rs  cursor.rs  decimal.rs  int.rs  raw_binary_writer.rs  timestamp.rs  var_int.rs  var_uint.rs
src/binary/non_blocking/: raw_binary_reader.rs
src/element/: builders.rs  element_stream_reader.rs  mod.rs  reader.rs  sequence.rs
src/ion_1_1/: alt.rs  mod.rs
src/lazy/: any_encoding.rs  decoder.rs  encoding.rs  never.rs  raw_stream_item.rs  struct.rs  system_reader.rs  value.rs
src/lazy/binary/: encoded_value.rs  immutable_buffer.rs
src/lazy/encoder/: annotate.rs  annotation_seq.rs  application_writer.rs  container_fn.rs  foo.rs  mod.rs  value_writer.rs  (+2 more)
src/serde/: mod.rs  owned_element_serializer.rs  tunnel.rs  writer_serializer.rs
src/templates/: expander.rs  mod.rs  template.rs
src/text/: text_formatter.rs  text_writer.rs
src/types/: coefficient.rs  decimal.rs  integer.rs  magnitude.rs  mod.rs  struct.rs  symbol.rs  timestamp.rs  value_ref.rs
src/value/: builders.rs  mod.rs  native_writer.rs  owned.rs  reader.rs
tests/: element_test_vectors.rs  good_test_vectors.rs  ion_hash_tests.rs
tests/ion_tests/: detect_incomplete_text.rs
(+35 files in other folders)
