[package]
name = "ion-rust"
version = "0.1.0"
edition = "2018"

[dependencies]
bigdecimal = "~0.1"
bytes = "~0.4"
chrono = "~0.4"
delegate = "0.4.2"
failure = "~0.1"
failure_derive = "~0.1"
walkdir = "~2.3"

[dev-dependencies]
regex = "1.3.9" # ion_grep
memmap = "0.7.0"

[profile.release]
lto = true
codegen-units = 1
